--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "snippet_manager",
   "version": "1.0.0",
-  "description" : "Snippet collections",
+  "description": "Snippet collections",
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.16.0",
     "express": "^4.14.1",
+    "express-session": "^1.15.0",
+    "handlebars": "^4.0.6",
     "nedb": "^1.8.0"
   },
   "devDependencies": {
@@ -16,6 +18,8 @@
   },
   "scripts": {
     "serve": "node build/test1",
-    "gulp": "gulp default"
+    "gulp": "gulp default",
+    "handlebars_compile": "handlebars hello.handlebars -f compiled-templates.js -m",
+    "handlebars_compile_multiple": "handlebars sample-templates/ > sample-templates/compiled_multiple-templates.js -m"
   }
 }
