--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "^4.14.1",
     "express-session": "^1.15.0",
     "handlebars": "^4.0.6",
+    "multer": "^1.3.0",
     "nedb": "^1.8.0"
   },
   "devDependencies": {
